unpackaged/main/default/objects/bt_base__Rule_Condition__c/bt_base__Rule_Condition__c.object-meta.xml
<CustomObject>
    <description>Contains an individual field reference, a function, and a value. Rule conditions are combined by rules, which dictate the website visitor’s visibility of and access to events, event items, sessions, products, and more.</description>
    <label>BT Rule Condition</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Rule Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Rule Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>