unpackaged/main/default/objects/bt_base__Rule_Condition__c/fields/bt_base__Field__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Field__c</fullName>
    <description>Specifies the field on the object to be evaluated in the rule condition.</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>