unpackaged/main/default/objects/bt_base__Rule_Condition__c/fields/bt_base__Operator__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Operator__c</fullName>
    <description>Specifies the logical operator for evaluating conditions.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>DOES NOT CONTAIN</fullName>
            </value>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
            <value>
                <fullName>GREATER OR EQUAL</fullName>
            </value>
            <value>
                <fullName>GREATER THAN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>LESS OR EQUAL</fullName>
            </value>
            <value>
                <fullName>LESS THAN</fullName>
            </value>
            <value>
                <fullName>NOT EQUAL TO</fullName>
            </value>
            <value>
                <fullName>STARTS WITH</fullName>
            </value>
            <value>
                <fullName>EQUAL</fullName>
                <isActive>false</isActive>
                <label>EQUAL</label>
            </value>
            <value>
                <fullName>GREATER THAN OR EQUAL</fullName>
                <isActive>false</isActive>
                <label>GREATER THAN OR EQUAL</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <isActive>false</isActive>
                <label>IN</label>
            </value>
            <value>
                <fullName>LESS THAN OR EQUAL</fullName>
                <isActive>false</isActive>
                <label>LESS THAN OR EQUAL</label>
            </value>
            <value>
                <fullName>LIKE</fullName>
                <isActive>false</isActive>
                <label>LIKE</label>
            </value>
            <value>
                <fullName>NOT EQUAL</fullName>
                <isActive>false</isActive>
                <label>NOT EQUAL</label>
            </value>
            <value>
                <fullName>NOT IN</fullName>
                <isActive>false</isActive>
                <label>NOT IN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>