unpackaged/main/default/objects/bt_base__Rule_Condition__c/fields/bt_base__Order__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Order__c</fullName>
    <description>Number that specifies the sequence in which rule conditions are evaluated.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>