unpackaged/main/default/objects/bt_base__Rule_Condition__c/fields/bt_base__Rule_Lookup__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Rule_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Rule conditions belong to a single parent rule, which dictates the website visitor’s visibility of and access to events, event items, sessions, products, and more.</description>
    <label>Rule</label>
    <referenceTo>bt_base__Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>