unpackaged/main/default/objects/bt_base__Rule_Condition__c/fields/bt_base__Value__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Value__c</fullName>
    <description>Value to be compared against the specified field in the rule condition.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>